<resources>
    <string name="app_name">North Kite</string>
    <string name="title_home">Home</string>
    <string name="title_smedia">Social Media</string>
    <string name="title_profile">Profile</string>
    <string name="first_start_one_text">Need <font fgcolor='#0EAB27'>rest</font> before a new <font fgcolor='#0EAB27'>start</font>?</string>
    <string name="first_start_two_text"><font fgcolor='#0EAB27'>Saving</font> for improve?</string>
    <string name="first_start_three_text">Get ready to<font fgcolor='#0EAB27'> explore</font> your <font fgcolor='#0EAB27'>ambitions</font>!</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="joined">Joined</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="manage_profile">Manage Profile</string>
    <string name="title_setting">Setting</string>
    <string name="notifications">Notifications</string>
    <string name="privacy_security"><![CDATA[Privacy & Security]]></string>
    <string name="theme">Theme</string>
    <string name="logout">Logout</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="register_welcome">Join the community of gap year activities with <font fgcolor='#0EAB27'>NORTH KITE</font></string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="buttonAssistance">buttonAssistance</string>
    <string name="buttontravel">buttonTravel</string>
    <string name="buttonjoboffer">buttonJobOffer</string>
    <string name="buttonintern">buttonIntern</string>
    <string name="buttonvolunteer">buttonVolunteer</string>
    <string name="travel">Travel</string>
    <string name="joboffer">JobOffer</string>
    <string name="volunteer">Volunteer</string>
    <string name="assistance">Assistance</string>
    <string name="intern">Intern</string>
    <string name="loginbutton">Login Button</string>
    <string name="registerbutton">Register Button</string>
    <string name="guestbutton">Guest Button</string>
    <string name="editProfile">Leave the field empty to leave it unchanged</string>
    <string name="confirm">Confirm</string>
    <string name="guest">Guest</string>
    <string name="oldpass">Old Password</string>
    <string name="confirmop">Confirm Old Password</string>
    <string name="newpass">New Password</string>
    <string name="confirmnp">Confirm New Password</string>
    <string name="changepass">Think twice before changing password!</string>
    <string name="goal">Before We Begin, What is Your Goal ?</string>
    <string name="relax">Relax</string>
    <string name="travelling">Travelling</string>
    <string name="study">Study</string>
    <string name="you_are_a">You are a…</string>
    <string name="student">Student</string>
    <string name="society">Society</string>
    <string name="other">Other</string>
    <string name="joined_time_format">%d days</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="follow_system">Follow System</string>
</resources>