<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="73dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/adamina"
        android:text="@string/you_are_a"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/buttonStudent"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="174dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="203dp"
        android:background="@drawable/rounded_button_background"
        android:clickable="true"
        android:fontFamily="@font/adamina"
        android:paddingTop="10dp"
        android:text="@string/student"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/buttonSociety"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="174dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="203dp"
        android:background="@drawable/rounded_button_background_3"
        android:clickable="true"
        android:fontFamily="@font/adamina"
        android:paddingTop="10dp"
        android:text="@string/society"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStudent" />

    <TextView
        android:id="@+id/buttonOther"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="174dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="203dp"
        android:background="@drawable/rounded_button_background_2"
        android:clickable="true"
        android:fontFamily="@font/adamina"
        android:paddingTop="10dp"
        android:text="@string/other"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSociety" />

</androidx.constraintlayout.widget.ConstraintLayout>