<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_goal_page" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="223dp"
        android:layout_height="73dp"
        android:layout_marginTop="8dp"
        android:fontFamily="cursive"
        android:text="@string/goal"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/buttonRelax"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="174dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="203dp"
        android:background="@drawable/rounded_button_background"
        android:clickable="true"
        android:fontFamily="@font/adamina"
        android:paddingTop="10dp"
        android:text="@string/relax"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/buttonTravelling"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="174dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="203dp"
        android:background="@drawable/rounded_button_background_3"
        android:clickable="true"
        android:fontFamily="@font/adamina"
        android:paddingTop="10dp"
        android:text="@string/travelling"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRelax" />

    <TextView
        android:id="@+id/buttonStudy"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="174dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="203dp"
        android:background="@drawable/rounded_button_background_2"
        android:clickable="true"
        android:fontFamily="@font/adamina"
        android:paddingTop="10dp"
        android:text="@string/study"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTravelling" />

</androidx.constraintlayout.widget.ConstraintLayout>