<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:text="@string/first_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/register_field" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/last_name"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:srcCompat="@drawable/register_field" />

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="167dp"
        android:layout_height="48dp"
        android:layout_marginTop="-1dp"
        android:backgroundTint="@android:color/transparent"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="text"
        android:paddingBottom="24dp"
        android:textColorHint="#4D000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/imageView9" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="165dp"
        android:layout_height="48dp"
        android:layout_marginTop="-1dp"
        android:backgroundTint="@android:color/transparent"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="text"
        android:paddingBottom="24dp"
        android:textColorHint="#4D000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/imageView10"
        app:layout_constraintTop_toTopOf="@+id/imageView10" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFirstName" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:srcCompat="@drawable/register_field_longer" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="348dp"
        android:layout_height="48dp"
        android:layout_marginTop="-1dp"
        android:backgroundTint="@android:color/transparent"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingBottom="24dp"
        android:textColorHint="#4D000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/imageView11"
        app:layout_constraintTop_toTopOf="@+id/imageView11" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:srcCompat="@drawable/register_field_longer" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="347dp"
        android:layout_height="48dp"
        android:layout_marginTop="-1dp"
        android:backgroundTint="@android:color/transparent"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingBottom="24dp"
        android:textColorHint="#4D000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/imageView12"
        app:layout_constraintTop_toTopOf="@+id/imageView12" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="310dp"
        android:layout_height="42dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/adamina"
        android:text="@string/register_welcome"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/confirm_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:srcCompat="@drawable/register_field_longer" />

    <EditText
        android:id="@+id/editTextPasswordConfirm"
        android:layout_width="347dp"
        android:layout_height="48dp"
        android:layout_marginTop="-1dp"
        android:backgroundTint="@android:color/transparent"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingBottom="24dp"
        android:textColorHint="#4D000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/imageView13"
        app:layout_constraintTop_toTopOf="@+id/imageView13" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/recovery_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordConfirm" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:srcCompat="@drawable/register_field_longer" />

    <EditText
        android:id="@+id/editTextRecoverEmail"
        android:layout_width="347dp"
        android:layout_height="48dp"
        android:layout_marginTop="-1dp"
        android:backgroundTint="@android:color/transparent"
        android:ems="10"
        android:hint="@string/recovery_email"
        android:inputType="textEmailAddress"
        android:paddingBottom="24dp"
        android:textColorHint="#4D000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/imageView14"
        app:layout_constraintTop_toTopOf="@+id/imageView14" />

    <ImageView
        android:id="@+id/buttonRegister_2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:scaleType="fitCenter"
        android:scaleX="0.75"
        android:scaleY="0.75"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/register_button" />
</androidx.constraintlayout.widget.ConstraintLayout>